[WIT-1481] Change Java Code Formatter
# New features and improvements

- Modified formatter to PALANTIR
- Removed m2 cache from sast jobs

# Related issue

Closes WIT-1481

# Definition of Done for Feature/Hotfixes

## All Developments

- [x] Feature was implemented as per the requirements
- [x] If some code parts are complex they must be commented with code documentation
- [x] CI/CD is successful
- [x] Code coverage is not reduced, any new code is covered
- [x] E2E/integration tests are successful (whether run locally or in CI/CD)
- [x] If dependencies were changed, be sure that they will not impact the project, that their license is compatible, and that they introduce no vulnerabilities
- [x] Documentation have been updated
  * Documentation has been updated with explanation of the new feature if it is user-facing (eg component now has additional setting) or it impacts him in some other way (eg optional field that becomes mandatory)
  * If it is a breaking change, we have documented it as such in the MR description in a "Breaking Changes" section
- [x] Check that you are not affecting any existing environments with these changes, especially the Sandbox/Playground. This means that merging it to master and deploying it to these environments will not break them and **no manual operations that are not reported in the documentation will be needed**
- [x] Check that nothing is out of order and nothing problematic is included in the changes (sensitive information, credentials, customer information or other intellectual property) as they could end up being public (we have Open Source SP already published and automatically mirrored)
- [x] Security, Authentication and Authorization have been considered. No SQL injection, tokens handling, RBAC integration. Common security vulnerabilities identified and resolved

## API Development

- [x] Semantic of API has been checked, it is comprehensible, meaningful, with no redundant information and user oriented
- [x] Meaningful unit a